fix closebuttons in widget and styles on tablet sizes

--- a/styles/Elements.module.css
+++ b/styles/Elements.module.css
@@ -345,7 +345,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  transform: translateX(40vw) translateX(50px);
+  transform: translateX(40vw) translateX(250px);
   transition: transform 500ms cubic-bezier(0.25, 0.72, 0.24, 1);
   z-index: 10000;
   color: var(--secondary);
